[package]
name = "simple-http-server"
version = "0.1.0"
authors = ["Vijay Veeraraghavan <vijay.raghavan08@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple http server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
tokio = "0.2.22"
structopt = "0.3.15"
futures = "0.3.5"
threadpool = "1.8.1"
num_cpus = "1.13.0"
